# optimization_lib_benchmarks

./: .clang-format  CMakeLists.txt  LICENSE  README.md
osqp/include/: cs.h
test/: CMakeLists.txt  gbench_example1.cc  gtest_example1.cc
